# mercure

./: .env.example  .gitignore  404.html  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  mercur-e.service  nginx.conf  pyproject.toml
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  tests.yml
AI_INTEGRATION/: index.html
AZƏRBAYCAN_README/: index.html
CONTRIBUTING/: index.html
FAQ/: index.html
TESTING/: index.html
docs/: AI_INTEGRATION.md  AZƏRBAYCAN_README.md  CONTRIBUTING.md  DEPLOYMENT.md  FAQ.md  QUICKSTART.md  TESTING.md  index.md
examples/: ci.yml  pam-githubbot
scripts/: run_local.sh  run_mcp.sh  setup.sh  verify_setup.sh
site/: index.html
site/DEPLOYMENT/: index.html
site/QUICKSTART/: index.html
site/search/: search_index.json
src/mercur_e/: __init__.py  commands.py  config.py  github_auth.py  main.py  mcp_server.py  security.py
tests/: __init__.py  conftest.py  test_commands.py  test_config.py  test_security.py
